src/Externals/swmm/outputapi/outputapi.py


node = (subcatch + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 70

link = (node + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 70

_sys = (link + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 70

SMO_elementType = enum_anon_4 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 70

enum_anon_5 = c_int # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 77

reportStep = 0 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 77

numPeriods = (reportStep + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 77

SMO_time = enum_anon_5 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 77

enum_anon_6 = c_int # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

rainfall_subcatch = 0 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

snow_depth_subcatch = (rainfall_subcatch + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

evap_loss = (snow_depth_subcatch + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

infil_loss = (evap_loss + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

runoff_rate = (infil_loss + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

gwoutflow_rate = (runoff_rate + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

gwtable_elev = (gwoutflow_rate + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

soil_moisture = (gwtable_elev + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

pollutant_conc_subcatch = (soil_moisture + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

SMO_subcatchAttribute = enum_anon_6 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 90

enum_anon_7 = c_int # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

invert_depth = 0 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

hydraulic_head = (invert_depth + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

stored_ponded_volume = (hydraulic_head + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

lateral_inflow = (stored_ponded_volume + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

total_inflow = (lateral_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

flooding_losses = (total_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

pollutant_conc_node = (flooding_losses + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

SMO_nodeAttribute = enum_anon_7 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 101

enum_anon_8 = c_int # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

flow_rate_link = 0 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

flow_depth = (flow_rate_link + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

flow_velocity = (flow_depth + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

flow_volume = (flow_velocity + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

capacity = (flow_volume + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

pollutant_conc_link = (capacity + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

SMO_linkAttribute = enum_anon_8 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 111

enum_anon_9 = c_int # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

air_temp = 0 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

rainfall_system = (air_temp + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

snow_depth_system = (rainfall_system + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

evap_infil_loss = (snow_depth_system + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

runoff_flow = (evap_infil_loss + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

dry_weather_inflow = (runoff_flow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

groundwater_inflow = (dry_weather_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

RDII_inflow = (groundwater_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

direct_inflow = (RDII_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

total_lateral_inflow = (direct_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

flood_losses = (total_lateral_inflow + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

outfall_flows = (flood_losses + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

volume_stored = (outfall_flows + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

evap_rate = (volume_stored + 1) # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

SMO_systemAttribute = enum_anon_9 # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 129

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 131
class struct_IDentry(Structure):
    pass

struct_IDentry.__slots__ = [
    'IDname',
    'nextID',
]
struct_IDentry._fields_ = [
    ('IDname', String),
    ('nextID', POINTER(struct_IDentry)),
]

idEntry = struct_IDentry # C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 135

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 137
if hasattr(_libs['outputapi'], 'SMR_open'):
    SMR_open = _libs['outputapi'].SMR_open
    SMR_open.argtypes = [String, POINTER(POINTER(SMOutputAPI))]
    SMR_open.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 140
if hasattr(_libs['outputapi'], 'SMO_getProjectSize'):
    SMO_getProjectSize = _libs['outputapi'].SMO_getProjectSize
    SMO_getProjectSize.argtypes = [POINTER(SMOutputAPI), SMO_elementCount, POINTER(c_int)]
    SMO_getProjectSize.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 141
if hasattr(_libs['outputapi'], 'SMO_getUnits'):
    SMO_getUnits = _libs['outputapi'].SMO_getUnits
    SMO_getUnits.argtypes = [POINTER(SMOutputAPI), SMO_unit, POINTER(c_int)]
    SMO_getUnits.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 142
if hasattr(_libs['outputapi'], 'SMO_getStartTime'):
    SMO_getStartTime = _libs['outputapi'].SMO_getStartTime
    SMO_getStartTime.argtypes = [POINTER(SMOutputAPI), POINTER(c_double)]
    SMO_getStartTime.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 143
if hasattr(_libs['outputapi'], 'SMO_getTimes'):
    SMO_getTimes = _libs['outputapi'].SMO_getTimes
    SMO_getTimes.argtypes = [POINTER(SMOutputAPI), SMO_time, POINTER(c_int)]
    SMO_getTimes.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 146
if hasattr(_libs['outputapi'], 'SMO_getSubcatchIDs'):
    SMO_getSubcatchIDs = _libs['outputapi'].SMO_getSubcatchIDs
    SMO_getSubcatchIDs.argtypes = [POINTER(SMOutputAPI), POINTER(c_int)]
    SMO_getSubcatchIDs.restype = POINTER(struct_IDentry)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 147
if hasattr(_libs['outputapi'], 'SMO_getNodeIDs'):
    SMO_getNodeIDs = _libs['outputapi'].SMO_getNodeIDs
    SMO_getNodeIDs.argtypes = [POINTER(SMOutputAPI), POINTER(c_int)]
    SMO_getNodeIDs.restype = POINTER(struct_IDentry)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 148
if hasattr(_libs['outputapi'], 'SMO_getLinkIDs'):
    SMO_getLinkIDs = _libs['outputapi'].SMO_getLinkIDs
    SMO_getLinkIDs.argtypes = [POINTER(SMOutputAPI), POINTER(c_int)]
    SMO_getLinkIDs.restype = POINTER(struct_IDentry)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 149
if hasattr(_libs['outputapi'], 'SMO_getPollutIDs'):
    SMO_getPollutIDs = _libs['outputapi'].SMO_getPollutIDs
    SMO_getPollutIDs.argtypes = [POINTER(SMOutputAPI), POINTER(c_int)]
    SMO_getPollutIDs.restype = POINTER(struct_IDentry)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 152
if hasattr(_libs['outputapi'], 'SMO_newOutValueSeries'):
    SMO_newOutValueSeries = _libs['outputapi'].SMO_newOutValueSeries
    SMO_newOutValueSeries.argtypes = [POINTER(SMOutputAPI), c_int, c_int, POINTER(c_int), POINTER(c_int)]
    SMO_newOutValueSeries.restype = POINTER(c_float)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 154
if hasattr(_libs['outputapi'], 'SMO_newOutValueArray'):
    SMO_newOutValueArray = _libs['outputapi'].SMO_newOutValueArray
    SMO_newOutValueArray.argtypes = [POINTER(SMOutputAPI), SMO_apiFunction, SMO_elementType, POINTER(c_int), POINTER(c_int)]
    SMO_newOutValueArray.restype = POINTER(c_float)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 158
if hasattr(_libs['outputapi'], 'SMO_newOutTimeList'):
    SMO_newOutTimeList = _libs['outputapi'].SMO_newOutTimeList
    SMO_newOutTimeList.argtypes = [POINTER(SMOutputAPI), POINTER(c_int)]
    SMO_newOutTimeList.restype = POINTER(c_double)

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 159
if hasattr(_libs['outputapi'], 'SMO_getTimeList'):
    SMO_getTimeList = _libs['outputapi'].SMO_getTimeList
    SMO_getTimeList.argtypes = [POINTER(SMOutputAPI), POINTER(c_double)]
    SMO_getTimeList.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 162
if hasattr(_libs['outputapi'], 'SMO_getSubcatchSeries'):
    SMO_getSubcatchSeries = _libs['outputapi'].SMO_getSubcatchSeries
    SMO_getSubcatchSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_subcatchAttribute, c_int, c_int, POINTER(c_float)]
    SMO_getSubcatchSeries.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 164
if hasattr(_libs['outputapi'], 'SMO_getNodeSeries'):
    SMO_getNodeSeries = _libs['outputapi'].SMO_getNodeSeries
    SMO_getNodeSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_nodeAttribute, c_int, c_int, POINTER(c_float)]
    SMO_getNodeSeries.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 166
if hasattr(_libs['outputapi'], 'SMO_getLinkSeries'):
    SMO_getLinkSeries = _libs['outputapi'].SMO_getLinkSeries
    SMO_getLinkSeries.argtypes = [POINTER(SMOutputAPI), c_int, SMO_linkAttribute, c_int, c_int, POINTER(c_float)]
    SMO_getLinkSeries.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 168
if hasattr(_libs['outputapi'], 'SMO_getSystemSeries'):
    SMO_getSystemSeries = _libs['outputapi'].SMO_getSystemSeries
    SMO_getSystemSeries.argtypes = [POINTER(SMOutputAPI), SMO_systemAttribute, c_int, c_int, POINTER(c_float)]
    SMO_getSystemSeries.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 172
if hasattr(_libs['outputapi'], 'SMO_getSubcatchAttribute'):
    SMO_getSubcatchAttribute = _libs['outputapi'].SMO_getSubcatchAttribute
    SMO_getSubcatchAttribute.argtypes = [POINTER(SMOutputAPI), c_int, SMO_subcatchAttribute, POINTER(c_float)]
    SMO_getSubcatchAttribute.restype = c_int

# C:\\Users\\Public\\Python\\OutputAPIs\\SWMMoutputAPI\\outputAPI.h: 174
if hasattr(_libs['outputapi'], 'SMO_getNodeAttribute'):
    SMO_getNodeAttribute = _libs['outputapi'].SMO_getNodeAttribute
    SMO_getNodeAttribute.argtypes = [POINTER(SMOutputAPI), c_int, SMO_nodeAttribute, POINTER(c_float)]
    SMO_getNodeAttribute.restype = c_int
